--- a/main.html
+++ b/main.html
@@ -4,13 +4,26 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		body p:first-child {
+			background-color: yellow;
+			border: 1px solid green;
+		}
+		body p:nth-child(2) {
+			background-color: red;
+			border: 1px solid black;
+		}
+		body p:last-child {
+			background-color: green;
+			border: 1px solid yellow;
+		}
+	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<p id="yellow">Paragraph-1</p>
+	<p id="red">Paragraph-2</p>
+	<p id="green">Paragraph-3</p>
 </body>
 
 </html>
